--- a/web/index.html
+++ b/web/index.html
@@ -3,20 +3,20 @@
     <head>
         <title>Among Us Heroku Server!</title>
 
-        <link rel="icon" type="image/png" sizes="512x512" href="favicons/android-chrome-512x512.png">
-        <link rel="icon" type="image/png" sizes="192x192" href="favicons/android-chrome-192x192.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
-        <link rel="icon" type="image/x-icon" href="favicons/favicon.ico">
-        <link rel="stylesheet" href="style.css">
-        <script src="./index.js" defer></script>
+        <link rel='icon' type='image/png' sizes='512x512' href='favicons/android-chrome-512x512.png'>
+        <link rel='icon' type='image/png' sizes='192x192' href='favicons/android-chrome-192x192.png'>
+        <link rel='apple-touch-icon' sizes='180x180' href='favicons/apple-touch-icon.png'>
+        <link rel='icon' type='image/png' sizes='32x32' href='favicons/favicon-32x32.png'>
+        <link rel='icon' type='image/png' sizes='16x16' href='favicons/favicon-16x16.png'>
+        <link rel='icon' type='image/x-icon' href='favicons/favicon.ico'>
+        <link rel='stylesheet' href='style.css'>
+        <script src='./index.js' defer></script>
     </head>
     <body>
-        <div id="tunnel">
-        <h3 id="tunnelurl"></h3>
+        <div id='tunnel'>
+        <h3 id='tunnelurl'></h3>
         </div>
         <hr>
-        <a rel="noopener noreferrer" class="github" href="https://github.com/TheBotlyNoob/Among-Us-Heroku" target="_blank"><img src="https://img.icons8.com/nolan/128/github.png" alt="github"/>Visit The GitHub Page!</a>
+        <a rel='noopener noreferrer' class='github' href='https://github.com/TheBotlyNoob/Among-Us-Heroku' target='_blank'><img src='https://img.icons8.com/nolan/128/github.png' alt='github'/>Visit The GitHub Page!</a>
     </body>
 </html>
